--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
 		<div id="background"></div>
 
 		<div id="content">
-			<div id="logo" class="courier-new section">
-				/league
+			<div id="logo-section" class="section">
+				<div id="logo" class="courier-new logo-subsection">
+					/league
+				</div>
+
+				<p class="logo-subsection text">
+					<span class="courier-new">/league</span> (read: slash league) is a data-driven web app to help League of Legends players win more games by using machine learning during the champ select phase.
+				</p>
 			</div>
 
 			<div id="champ-select">
@@ -118,69 +124,57 @@
 			</div>
 
 			<div class="section" id="description">
-				<h1>Description</h1>
-				<ul class="text">
-					<li>
-						<span class="courier-new">/league</span> (read: slash league) is a data-driven web app to help League of Legends players win more games by using machine learning during the champ select phase.
-					</li>
-					<li>
-						Simliar to most chess AIs, <span class="courier-new">/league</span> uses a variation of <a href="https://en.wikipedia.org/wiki/Minimax">minimax</a> to determine an optimal team composition at any stage in champ select.
-						An optimal team composition is made of champions that work well together as well as counter the opponent's champions.
-						Intelligent champion select is half the game - your opponents won't know what hit them.
-					</li>
-					<li>
-						There is no voting system in <span class="courier-new">/league</span>, because (pending Riot approval) we analyze millions of games a day in order to discover both visible and hard-to-see trends in champion countering statistics.
-						(Fake data for now - to be fixed once we receive Riot data and an example is found) For example, lolcounter.com shows Kayle as the strongest counter to Zed, though an analysis of 200 million games shows that Zed wins 52% of games against Kayle.
-						It may be true that Kayle usually wins lane against Zed, but <span class="courier-new">/league</span> finds team compositions that will win players games - not necessarily winning lane.
-						(Again, fake data) Of the 200 million games analyzed from Patch 6.15, the outcome of 72% of games were predicted correctly based on team composition alone, acheiving 89% accuracy using weighted certainty.
-					</li>
-					<li>
-						<span class="courier-new">/league</span> does not take into account a player's (and their team's) personal statistics on each champion, though this feature may come in an upcoming release.
-						Additionally, we don't take into account lane selection. We aim to mimic pro play champion select - where the team communicates fluidly, has every champ unlocked, and trades to match their lanes.
-						This also opens possibilities of non-conventional lane choices.
-						Still, popularity of a composition is always displayed, so players will be warned if they are choosing a risky path.
-					</li>
-					<li>
-						Oh god I'm a terrible writer - someone please tell me how to fix this
-					</li>
-				</ul>
-			</div>
-
-			<div class="section" id="how-to-use">
-				<h1>How to Use</h1>
-				<ul class="text">
-					<li>
-						One at a time, select champions that have already been chosen in your game.
-						Be careful! Blue side is always on the left on <span class="courier-new">/league</span>.
-					</li>
-					<li>
-						Next select your division and game side (blue/red).
-					</li>
-					<li>
-						The champions selected in "Bans" cannot be chosen by either side, and the champions selected in "Self-Bans" can be chosen by your opponent, but not by your team.
-						Self-banned champions are usually champions that you or your team don't feel comfortable playing, or just don't feel like playing.
-					</li>
-					<li>
-						Depth and pruning factor are the primary factors that determine the duration of the search.
-						Depth is the number of possible opponent responses that are measured.
-						A depth of 1 only finds the proportion of games winnable by the next chosen champ, but a depth of 2 also takes into account each response by the opponent.
-						Increasing depth dramatically increases computation time.
-						Pruning factor determines the proportion of paths that are ignored.
-						A pruning factor of 90% quickly stops investigating team compositions that are likely to do poorly, while a pruning factor of 0% investigates literally every possible champion selection combination.
-						Increasing pruning factor decreases computation time.
-					</li>
-					<li>
-						Finally, click Start to begin the search. Your progress will be displayed, and the results are shown along with win probability and a soft popularity score as a percentage.
-						You can share the results with a friend or save them for later by sending them the url after results have been calculated.
-					</li>
-					<li>
-						Oh god I'm a terrible writer - someone please tell me how to fix this pt2
-					</li>
-				</ul>
+				<div class="subsection">
+					<h1>Description</h1>
+					<ul class="text">
+						<li>
+							Similar to most chess AIs, <span class="courier-new">/league</span> uses a variation of minimax to determine an optimal team composition at any stage in champ select. An optimal team composition is made of champions that work well together as well as counter the opponent's champions. 
+						</li>
+					</ul>
+				</div>
+				<div class="subsection">
+					<h1>No Voting System</h1>
+					<ul class="text">
+						<li>
+							Unlike other tools, there is no voting system in <span class="courier-new">/league</span>. (Pending Riot approval) We analyze millions of games a day in order to discover both visible and hard-to-see trends in champion countering statistics. (Currently, our tool features fake data but will be developed with real data upon Riot approval.) For example, lolcounter.com shows Kayle as the strongest counter to Zed. However, <span class="courier-new">/league</span> statistics after 200 million games show that Zed wins 52% of games against Kayle.
+						</li>
+					</ul>
+				</div>
+				<div class="subsection">
+					<h1>Win More Games</h1>
+					<ul class="text">
+						<li>
+							Lolcounter's voters may recommend Kayle as a counter to Zed in lane, but <span class="courier-new">/league</span> finds team compositions that will win games. Of the 200 million games analyzed from Patch 6.18, the outcome of 72% of games were predicted correctly based on team composition alone, achieving 89% accuracy using weighted certainty.
+						</li>
+						<li>
+							<span class="courier-new">/league</span> does not take into account a player's (and their team's) personal statistics on each champion, though this feature may come in an upcoming release. Additionally, we don't take into account lane selection. We aim to mimic pro play champion select - where the team communicates fluidly, has every champ unlocked, and trades to match their lanes. This also opens possibilities of non-conventional lane choices. Still, popularity of a composition is always displayed, so players will be warned if they are choosing a risky path.
+						</li>
+					</ul>
+				</div>
+				<div class="subsection">
+					<h1>How to Use</h1>
+					<ul class="text">
+						<li>
+							One at a time, select champions that have already been chosen in your game. Be careful! Blue side is always on the left on <span class="courier-new">/league</span>.
+						</li>
+						<li>
+							Next select your division and game side (blue/red).
+						</li>
+						<li>
+							The champions selected in "Bans" cannot be chosen by either side, and the champions selected in "Self-Bans" can be chosen by your opponent, but not by your team. Self-banned champions are usually champions that you or your team don't feel comfortable playing, or just don't feel like playing.
+						</li>
+						<li>
+							Depth and pruning factor are the primary factors that determine the duration of the search. Depth is the number of possible responses that are analyzed. A depth of 1 only finds the proportion of games winnable by the next chosen champ, but a depth of 2 also takes into account each response by the opponent. Increasing depth dramatically increases computation time. Pruning factor determines the proportion of paths that are ignored. A pruning factor of 90% quickly stops investigating team compositions that are likely to do poorly, while a pruning factor of 0% investigates literally every possible champion selection combination. Increasing pruning factor decreases computation time.
+						</li>
+						<li>
+							Finally, click Start to begin the search. Your progress will be displayed, and the results are shown along with win probability and a soft popularity score as a percentage. You can share the results with a friend or save them for later by sending them the url after results have been calculated.
+						</li>
+					</ul>
+				</div>
 			</div>
 
 			<div class="section" id="additional-notes">
-				<div id="contact">
+				<div class="subsection">
 					<h1>Contact</h1>
 					<ul class="text">
 						<li>Send comments, requests, questions, and bugs to <span>dcep93@gmail.com</span></li>
@@ -195,8 +189,11 @@
 						</li>
 					</ul>
 				</div>
-				<div id="tos">
-					Terms of Service Coming Soon
+				<div class="subsection">
+					<h1>Terms of Service</h1>
+					<ul class="text">
+						<li>Coming Soon</li>
+					</ul>
 				</div>
 			</div>
 		</div>
